Switched to Optional in some places.